# LittleNavmapDCS_connector

./: CMakeLists.txt  LICENSE
dcsPlugin/CPP_part/: CMakeLists.txt  main.cpp
dcsPlugin/DCS_part/: Export.lua
navdataRead/: CMakeLists.txt  navdataReadMain.cpp
navdataRead/embed_atools/resources/sql/fs/db/: drop_nav.sql
navdataRead/embed_atools/src/fs/sc/: simconnectdummy.h
navdataRead/embed_atools/src/httpserver/: httpglobal.h  httpsessionstore.cpp  httpsessionstore.h  staticfilecontroller.cpp  staticfilecontroller.h
navdataRead/embed_atools/src/templateengine/: template.cpp  template.h  templatecache.cpp  templatecache.h  templateglobal.h  templateloader.cpp  templateloader.h
navdataRead/embed_atools/src/wmm/: GeomagnetismHeader.h  GeomagnetismLibrary.c
